example.services.user/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: 718466725446.dkr.ecr.eu-west-1.amazonaws.com/bar:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          # resources:
          #   limits:
          #     cpu: "1"
          #     memory: "512Mi"
          #   requests:
          #     cpu: "0.5"
          #     memory: "256Mi"
